@@ -6,7 +6,7 @@ using System.Runtime.InteropServices;
 //------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.3074
+//     Runtime Version:2.0.50727.3603
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -15,13 +15,13 @@ using System.Runtime.InteropServices;
 
 [assembly: CLSCompliantAttribute(true)]
 [assembly: ComVisibleAttribute(false)]
-[assembly: AssemblyTitleAttribute("Castle.Components.Binder.Tests for Microsoft .NET Framework 3.5")]
+[assembly: AssemblyTitleAttribute("Castle.Components.Binder.Tests for Mono 3.5 Profile")]
 [assembly: AssemblyDescriptionAttribute("")]
 [assembly: AssemblyCompanyAttribute("Castle Project")]
 [assembly: AssemblyProductAttribute("Castle.Components.Binder.Tests")]
 [assembly: AssemblyCopyrightAttribute("Castle Project, original author or authors")]
 [assembly: AssemblyVersionAttribute("1.1.0.0")]
-[assembly: AssemblyInformationalVersionAttribute("1.1.0.0")]
-[assembly: AssemblyFileVersionAttribute("1.1.0.0")]
+[assembly: AssemblyInformationalVersionAttribute("1.1.0.6248")]
+[assembly: AssemblyFileVersionAttribute("1.1.0.6248")]
 [assembly: AssemblyDelaySignAttribute(false)]
 
