@@ -89,6 +89,12 @@ namespace Castle.Components.Binder
 			{
 				TrySpecialDateTimeBinding(desiredType, treeRoot, paramName, out canConvert);
 			}
+#if !MONO
+			else if (desiredType == typeof(DateTimeOffset))
+			{
+				TrySpecialDateTimeOffsetBinding(desiredType, treeRoot, paramName, out canConvert);
+			}
+#endif
 			else
 			{
 				canConvert = false;
@@ -662,10 +668,12 @@ namespace Castle.Components.Binder
 				return TrySpecialDateTimeBinding(desiredType, parent, key, out conversionSucceeded);
 			}
 
+#if !MONO
 			if (childNode == null && IsDateTimeOffsetType(desiredType))
 			{
 				return TrySpecialDateTimeOffsetBinding(desiredType, parent, key, out conversionSucceeded);
 			}
+#endif
 
 			if (childNode == null)
 			{
@@ -908,6 +916,7 @@ namespace Castle.Components.Binder
 			return null;
 		}
 
+#if !MONO
 		private object TrySpecialDateTimeOffsetBinding(Type desiredType, CompositeNode treeRoot,
 																						 String paramName, out bool conversionSucceeded)
 		{
@@ -931,6 +940,7 @@ namespace Castle.Components.Binder
 			conversionSucceeded = false;
 			return null;
 		}
+#endif
 
 		private object RelaxedConvertLeafNode(Type desiredType, Node node, object defaultValue)
 		{
@@ -971,6 +981,7 @@ namespace Castle.Components.Binder
 			return false;
 		}
 
+#if !MONO
 		private bool IsDateTimeOffsetType(Type desiredType)
 		{
 			if (desiredType == typeof(DateTimeOffset))
@@ -990,6 +1001,7 @@ namespace Castle.Components.Binder
 
 			return false;
 		}
+#endif
 
 		#region Support methods
 
